// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DOM snapshots SLDSSpinner Brand Large 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="my-custom-classname slds-spinner_container"
  >
    <div
      aria-hidden="false"
      className="slds-spinner slds-spinner_brand slds-spinner_large"
      role="status"
    >
      <span
        className="slds-assistive-text"
      >
        Loading...
      </span>
      <div
        className="slds-spinner__dot-a"
      />
      <div
        className="slds-spinner__dot-b"
      />
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner Brand Medium 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-spinner_container"
  >
    <div
      aria-hidden="false"
      className="slds-spinner slds-spinner_brand slds-spinner_medium"
      role="status"
    >
      <span
        className="slds-assistive-text"
      >
        Loading...
      </span>
      <div
        className="slds-spinner__dot-a"
      />
      <div
        className="slds-spinner__dot-b"
      />
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner Brand Small 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-spinner_container"
  >
    <div
      aria-hidden="false"
      className="slds-spinner slds-spinner_brand slds-spinner_small"
      role="status"
    >
      <span
        className="slds-assistive-text"
      >
        Loading...
      </span>
      <div
        className="slds-spinner__dot-a"
      />
      <div
        className="slds-spinner__dot-b"
      />
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner Brand X-Small 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-spinner_container"
  >
    <div
      aria-hidden="false"
      className="slds-spinner slds-spinner_brand slds-spinner_x-small"
      role="status"
    >
      <span
        className="slds-assistive-text"
      >
        Loading...
      </span>
      <div
        className="slds-spinner__dot-a"
      />
      <div
        className="slds-spinner__dot-b"
      />
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner Brand Xx-Small 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-spinner_container"
  >
    <div
      aria-hidden="false"
      className="slds-spinner slds-spinner_brand slds-spinner_xx-small"
      role="status"
    >
      <span
        className="slds-assistive-text"
      >
        Loading...
      </span>
      <div
        className="slds-spinner__dot-a"
      />
      <div
        className="slds-spinner__dot-b"
      />
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner Docs site Default 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "height": "5rem",
        "position": "relative",
      }
    }
  >
    <div
      className="slds-spinner_container"
    >
      <div
        aria-hidden="false"
        className="slds-spinner slds-spinner_small"
        role="status"
      >
        <span
          className="slds-assistive-text"
        >
          Main Frame Loading...
        </span>
        <div
          className="slds-spinner__dot-a"
        />
        <div
          className="slds-spinner__dot-b"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner Inline 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-align_absolute-center"
    style={
      Object {
        "height": "4rem",
      }
    }
  >
    <div
      aria-hidden="false"
      className="slds-spinner slds-spinner_inline slds-spinner_medium"
      role="status"
    >
      <span
        className="slds-assistive-text"
      >
        Loading...
      </span>
      <div
        className="slds-spinner__dot-a"
      />
      <div
        className="slds-spinner__dot-b"
      />
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner Inverse Large 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "backgroundColor": "#16325c",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <div
      className="slds-spinner_container"
    >
      <div
        aria-hidden="false"
        className="slds-spinner slds-spinner_inverse slds-spinner_large"
        role="status"
      >
        <span
          className="slds-assistive-text"
        >
          Loading...
        </span>
        <div
          className="slds-spinner__dot-a"
        />
        <div
          className="slds-spinner__dot-b"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner Inverse Medium 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "backgroundColor": "#16325c",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <div
      className="slds-spinner_container"
    >
      <div
        aria-hidden="false"
        className="slds-spinner slds-spinner_inverse slds-spinner_medium"
        role="status"
      >
        <span
          className="slds-assistive-text"
        >
          Loading...
        </span>
        <div
          className="slds-spinner__dot-a"
        />
        <div
          className="slds-spinner__dot-b"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner Inverse Small 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "backgroundColor": "#16325c",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <div
      className="slds-spinner_container"
    >
      <div
        aria-hidden="false"
        className="slds-spinner slds-spinner_inverse slds-spinner_small"
        role="status"
      >
        <span
          className="slds-assistive-text"
        >
          Loading...
        </span>
        <div
          className="slds-spinner__dot-a"
        />
        <div
          className="slds-spinner__dot-b"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner Inverse X-Small 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "backgroundColor": "#16325c",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <div
      className="slds-spinner_container"
    >
      <div
        aria-hidden="false"
        className="slds-spinner slds-spinner_inverse slds-spinner_x-small"
        role="status"
      >
        <span
          className="slds-assistive-text"
        >
          Loading...
        </span>
        <div
          className="slds-spinner__dot-a"
        />
        <div
          className="slds-spinner__dot-b"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner Inverse Xx-Small 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    style={
      Object {
        "backgroundColor": "#16325c",
        "height": "100%",
        "position": "absolute",
        "width": "100%",
      }
    }
  >
    <div
      className="slds-spinner_container"
    >
      <div
        aria-hidden="false"
        className="slds-spinner slds-spinner_inverse slds-spinner_xx-small"
        role="status"
      >
        <span
          className="slds-assistive-text"
        >
          Loading...
        </span>
        <div
          className="slds-spinner__dot-a"
        />
        <div
          className="slds-spinner__dot-b"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner Large 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-spinner_container"
  >
    <div
      aria-hidden="false"
      className="slds-spinner slds-spinner_large"
      role="status"
    >
      <span
        className="slds-assistive-text"
      >
        Loading...
      </span>
      <div
        className="slds-spinner__dot-a"
      />
      <div
        className="slds-spinner__dot-b"
      />
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner Large with 300ms delay 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-spinner_container"
  >
    <div
      aria-hidden="false"
      className="slds-spinner slds-spinner_delayed slds-spinner_large"
      role="status"
    >
      <span
        className="slds-assistive-text"
      >
        Loading...
      </span>
      <div
        className="slds-spinner__dot-a"
      />
      <div
        className="slds-spinner__dot-b"
      />
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner Medium 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-spinner_container"
  >
    <div
      aria-hidden="false"
      className="slds-spinner slds-spinner_medium"
      role="status"
    >
      <span
        className="slds-assistive-text"
      >
        Loading...
      </span>
      <div
        className="slds-spinner__dot-a"
      />
      <div
        className="slds-spinner__dot-b"
      />
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner No Container 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-align_absolute-center"
    style={
      Object {
        "height": "4rem",
      }
    }
  >
    <div
      aria-hidden="false"
      className="slds-spinner slds-spinner_medium"
      role="status"
    >
      <span
        className="slds-assistive-text"
      >
        Loading...
      </span>
      <div
        className="slds-spinner__dot-a"
      />
      <div
        className="slds-spinner__dot-b"
      />
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner Small 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-spinner_container"
  >
    <div
      aria-hidden="false"
      className="slds-spinner slds-spinner_small"
      role="status"
    >
      <span
        className="slds-assistive-text"
      >
        Main Frame Loading...
      </span>
      <div
        className="slds-spinner__dot-a"
      />
      <div
        className="slds-spinner__dot-b"
      />
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner X-Small 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-spinner_container"
  >
    <div
      aria-hidden="false"
      className="slds-spinner slds-spinner_x-small"
      role="status"
    >
      <span
        className="slds-assistive-text"
      >
        Main Frame Loading...
      </span>
      <div
        className="slds-spinner__dot-a"
      />
      <div
        className="slds-spinner__dot-b"
      />
    </div>
  </div>
</div>
`;

exports[`DOM snapshots SLDSSpinner Xx-Small 1`] = `
<div
  className="slds-p-around_medium"
>
  <div
    className="slds-spinner_container"
  >
    <div
      aria-hidden="false"
      className="slds-spinner slds-spinner_xx-small"
      role="status"
    >
      <span
        className="slds-assistive-text"
      >
        Main Frame Loading...
      </span>
      <div
        className="slds-spinner__dot-a"
      />
      <div
        className="slds-spinner__dot-b"
      />
    </div>
  </div>
</div>
`;
